# ros2-mobile-manipulator

./: .gitignore  README.md
src/bot_description/: CMakeLists.txt  package.xml
src/bot_description/config/: arm_controllers.yaml
src/bot_description/launch/: rsp.launch.xml
src/bot_description/rviz/: bot.rviz
src/bot_description/urdf/: arm.xacro  bot.urdf.xacro  camera.xacro  gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  robot_core.xacro  ros2_control.xacro
src/bot_gazebo/: CMakeLists.txt  package.xml
src/bot_gazebo/config/: gz_bridge.yaml
src/bot_gazebo/launch/: sim.launch.xml
src/bot_gazebo/worlds/: empty.sdf
src/bot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/bot_moveit_config/config/: bot.srdf  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
src/bot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py
src/bot_navigation/: CMakeLists.txt  explore.py  package.xml
src/bot_navigation/config/: nav2_params.yaml
src/bot_navigation/launch/: nav2.launch.xml
src/bot_navigation/maps/: colorful_house_map.pgm  colorful_house_map.yaml  first_map.pgm  first_map.yaml
